[gd_scene format=3 uid="uid://bwoajv3vauep7"]

[ext_resource type="Script" uid="uid://diced736skmdb" path="res://Scripts/main_menu.gd" id="1_1ehe0"]
[ext_resource type="Texture2D" uid="uid://btav4w1ra5s8u" path="res://Scenes/image.jpg" id="2_16hvj"]
[ext_resource type="Texture2D" uid="uid://ch5yc8gptoiym" path="res://Assets/template_free/individual_sheets/male_hero_template-idle.png" id="3_8dnnj"]
[ext_resource type="Texture2D" uid="uid://bnrc8581650m5" path="res://Assets/Trap and Weapon/Suriken.png" id="3_m3bi6"]
[ext_resource type="FontFile" uid="uid://cxf3fjifcum4w" path="res://Fuentes/GrapeSoda/GrapeSoda.ttf" id="3_n45e2"]
[ext_resource type="AudioStream" uid="uid://qs1e1botfnvq" path="res://Sounds/pixel-song-19-31953_junta.mp3" id="4_ce3w2"]
[ext_resource type="Texture2D" uid="uid://cdhoflubr8g2r" path="res://Assets/template_free/individual_sheets/male_hero_template-fall.png" id="4_m3bi6"]
[ext_resource type="Texture2D" uid="uid://fl5ro2jj0461" path="res://Assets/template_free/individual_sheets/male_hero_template-jump.png" id="5_wyh8j"]
[ext_resource type="FontFile" uid="uid://b7mtyx0310bsa" path="res://Fuentes/dogica/TTF/dogicapixel.ttf" id="6_trj04"]
[ext_resource type="Texture2D" uid="uid://c54g0kh4h1giw" path="res://Assets/template_free/individual_sheets/male_hero_template-run.png" id="6_ujyyl"]
[ext_resource type="Texture2D" uid="uid://co7sp2k8lfmgy" path="res://Assets/Background/suelomuerte.png" id="7_4nkqq"]
[ext_resource type="Texture2D" uid="uid://cajjv4cu0oogn" path="res://Assets/template_free/individual_sheets/male_hero_template-walk.png" id="7_mkpwh"]
[ext_resource type="Texture2D" uid="uid://b2sswmbou53rj" path="res://Assets/fondoazul.png" id="9_trj04"]
[ext_resource type="AudioStream" uid="uid://k4gdavo25o5a" path="res://Sounds/click.wav" id="10_16hvj"]
[ext_resource type="PackedScene" uid="uid://ctd8gggp7pk26" path="res://Scenes/sueloveneno.tscn" id="12_t1dhk"]
[ext_resource type="PackedScene" uid="uid://bnb34w848pgft" path="res://Scenes/fire.tscn" id="13_5egv6"]
[ext_resource type="PackedScene" uid="uid://dpqnh5sv8jh3b" path="res://Scenes/coins.tscn" id="14_vtepg"]
[ext_resource type="Texture2D" uid="uid://b7ua0nsa53s83" path="res://Assets/Forest_Monsters_FREE/Mushroom/Mushroom without VFX/Mushroom-Run.png" id="17_wyh8j"]
[ext_resource type="Texture2D" uid="uid://b52boxyxtk7wj" path="res://Assets/Animate Spikes/Animate Spikes/slimeWalk1.png" id="18_mkpwh"]
[ext_resource type="Texture2D" uid="uid://ccuqxi4dtl36n" path="res://Assets/Animate Spikes/Animate Spikes/slimeWalk2.png" id="19_4nkqq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jp6yl"]
atlas = ExtResource("3_m3bi6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_syb6t"]
atlas = ExtResource("3_m3bi6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sr3h5"]
atlas = ExtResource("3_m3bi6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oet3e"]
atlas = ExtResource("3_m3bi6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbaom"]
atlas = ExtResource("3_m3bi6")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynh0k"]
atlas = ExtResource("3_m3bi6")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckpvg"]
atlas = ExtResource("3_m3bi6")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0w0c"]
atlas = ExtResource("3_m3bi6")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ckpvg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp6yl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_syb6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sr3h5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oet3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbaom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynh0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckpvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0w0c")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="GDScript" id="GDScript_trj04"]

[sub_resource type="Animation" id="Animation_cp0ys"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_opfnp"]
resource_name = "animacion"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yhxw7"]
_data = {
&"RESET": SubResource("Animation_cp0ys"),
&"animacion": SubResource("Animation_opfnp")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(0.54509807, 0.0627451, 0.043137256, 1)
border_width_left = 7
border_width_top = 4
border_width_right = 7
border_width_bottom = 4
border_color = Color(1, 0.7176471, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu7sn"]
bg_color = Color(0.54509807, 0.0627451, 0.043137256, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jix8l"]
bg_color = Color(1, 0.7176471, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7vrkn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oua2g"]
atlas = ExtResource("3_8dnnj")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mb44e"]
atlas = ExtResource("3_8dnnj")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_aknpy"]
atlas = ExtResource("3_8dnnj")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bknw"]
atlas = ExtResource("3_8dnnj")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fr03m"]
atlas = ExtResource("3_8dnnj")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wu5nh"]
atlas = ExtResource("3_8dnnj")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2gsv"]
atlas = ExtResource("3_8dnnj")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hf4tf"]
atlas = ExtResource("3_8dnnj")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2yei"]
atlas = ExtResource("3_8dnnj")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0mfl"]
atlas = ExtResource("3_8dnnj")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_aw8s2"]
atlas = ExtResource("4_m3bi6")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gs4x"]
atlas = ExtResource("4_m3bi6")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1csxk"]
atlas = ExtResource("4_m3bi6")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kk0o3"]
atlas = ExtResource("4_m3bi6")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lp4st"]
atlas = ExtResource("5_wyh8j")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jim6r"]
atlas = ExtResource("5_wyh8j")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihteu"]
atlas = ExtResource("5_wyh8j")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhjea"]
atlas = ExtResource("5_wyh8j")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ii0v"]
atlas = ExtResource("5_wyh8j")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8k6w"]
atlas = ExtResource("5_wyh8j")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_310my"]
atlas = ExtResource("6_ujyyl")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hqh5"]
atlas = ExtResource("6_ujyyl")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_oy1vx"]
atlas = ExtResource("6_ujyyl")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3i6pd"]
atlas = ExtResource("6_ujyyl")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcrbm"]
atlas = ExtResource("6_ujyyl")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5vdq"]
atlas = ExtResource("6_ujyyl")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_01vd6"]
atlas = ExtResource("6_ujyyl")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp7yg"]
atlas = ExtResource("6_ujyyl")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkoaa"]
atlas = ExtResource("6_ujyyl")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjlse"]
atlas = ExtResource("6_ujyyl")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5nsjc"]
atlas = ExtResource("7_mkpwh")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vc6x"]
atlas = ExtResource("7_mkpwh")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cdix"]
atlas = ExtResource("7_mkpwh")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1a6r"]
atlas = ExtResource("7_mkpwh")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yy7ku"]
atlas = ExtResource("7_mkpwh")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnm2g"]
atlas = ExtResource("7_mkpwh")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_see0k"]
atlas = ExtResource("7_mkpwh")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxv3l"]
atlas = ExtResource("7_mkpwh")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5kao"]
atlas = ExtResource("7_mkpwh")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sfcj"]
atlas = ExtResource("7_mkpwh")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_8dnnj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oua2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mb44e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aknpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bknw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fr03m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wu5nh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2gsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hf4tf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2yei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0mfl")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aw8s2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gs4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1csxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kk0o3")
}],
"loop": true,
"name": &"fall",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lp4st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jim6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihteu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhjea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ii0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8k6w")
}],
"loop": true,
"name": &"jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_310my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hqh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oy1vx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i6pd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcrbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5vdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01vd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp7yg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkoaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjlse")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5nsjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vc6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cdix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1a6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yy7ku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnm2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_see0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxv3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5kao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sfcj")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_287tu"]
atlas = ExtResource("17_wyh8j")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0830c"]
atlas = ExtResource("17_wyh8j")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghaa6"]
atlas = ExtResource("17_wyh8j")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dp5w"]
atlas = ExtResource("17_wyh8j")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_auwsv"]
atlas = ExtResource("17_wyh8j")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uf12"]
atlas = ExtResource("17_wyh8j")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_po0sg"]
atlas = ExtResource("17_wyh8j")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_haro7"]
atlas = ExtResource("17_wyh8j")
region = Rect2(560, 0, 80, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ujyyl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_287tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0830c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghaa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dp5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auwsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uf12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_po0sg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_haro7")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_f1qqd"]
atlas = ExtResource("18_mkpwh")
region = Rect2(0, 0, 50, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_v37lf"]
atlas = ExtResource("19_4nkqq")
region = Rect2(0, 0, 51, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_ehtkc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1qqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v37lf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="MainMenu" type="Control" unique_id=1690812792]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ehe0")

[node name="Menu" type="Sprite2D" parent="." unique_id=926436088]
position = Vector2(677, 352.5)
scale = Vector2(1.0913463, 0.8834135)
texture = ExtResource("2_16hvj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Menu" unique_id=1286022439]
position = Vector2(-350.9427, -246.20407)
scale = Vector2(3.4052868, 3.7561781)
sprite_frames = SubResource("SpriteFrames_ckpvg")
autoplay = "default"
frame_progress = 0.4591195

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Menu" unique_id=1736227573]
position = Vector2(341.77972, -257.52383)
scale = Vector2(3.3084443, 3.8775508)
sprite_frames = SubResource("SpriteFrames_ckpvg")
autoplay = "default"
frame_progress = 0.4591195

[node name="Titulo" type="Label" parent="." unique_id=183452755]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -309.0
offset_top = -297.0
offset_right = 300.0
offset_bottom = -151.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.7176471, 0, 1)
theme_override_colors/font_shadow_color = Color(0.9647059, 0.28627452, 0, 1)
theme_override_colors/font_outline_color = Color(0.42745098, 0.050980393, 0, 1)
theme_override_constants/shadow_offset_y = -2
theme_override_fonts/font = ExtResource("3_n45e2")
theme_override_font_sizes/font_size = 116
text = "Steal a Coins"
horizontal_alignment = 1
vertical_alignment = 1
script = SubResource("GDScript_trj04")

[node name="Audiomenu" type="AudioStreamPlayer" parent="." unique_id=920907222]
stream = ExtResource("4_ce3w2")
volume_db = -10.0
autoplay = true

[node name="Sprite2D5" type="Sprite2D" parent="." unique_id=661834091]
visible = false
position = Vector2(678, 361.5)
scale = Vector2(1.3378906, 0.6982422)
texture = ExtResource("9_trj04")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D5" unique_id=331847798]
libraries/ = SubResource("AnimationLibrary_yhxw7")
autoplay = &"animacion"

[node name="Suelomuerte" type="Sprite2D" parent="." unique_id=383591951]
position = Vector2(768, 873.00006)
scale = Vector2(1, 0.9658203)
texture = ExtResource("7_4nkqq")

[node name="Audio" type="AudioStreamPlayer" parent="." unique_id=1496443104]
stream = ExtResource("10_16hvj")
volume_db = 8.801

[node name="Button" type="Button" parent="." unique_id=443343748]
layout_mode = 0
offset_left = 16.0
offset_top = 619.0
offset_right = 429.0
offset_bottom = 697.0
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0.7372549, 0, 1)
theme_override_colors/font_focus_color = Color(0.49411765, 0.07058824, 0, 1)
theme_override_colors/font_pressed_color = Color(0.99607843, 0.7137255, 0, 1)
theme_override_fonts/font = ExtResource("6_trj04")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/hover = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "Ver reglas"

[node name="Button2" type="Button" parent="." unique_id=1508519700]
layout_mode = 0
offset_left = 483.0
offset_top = 624.0
offset_right = 849.0
offset_bottom = 698.0
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0.72156864, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6_trj04")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/hover = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "Jugar ya
"

[node name="Button3" type="Button" parent="." unique_id=2111168192]
layout_mode = 0
offset_left = 927.0
offset_top = 618.0
offset_right = 1282.0
offset_bottom = 695.0
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0.7176471, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6_trj04")
theme_override_font_sizes/font_size = 41
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/hover = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "Salir
"

[node name="sueloveneno" parent="." unique_id=1063590978 instance=ExtResource("12_t1dhk")]
position = Vector2(1217, 434.00003)
scale = Vector2(11, 11)

[node name="CharacterBody2D" parent="." unique_id=1975231683 instance=ExtResource("13_5egv6")]
position = Vector2(221, 536)
scale = Vector2(4, 4)

[node name="Coins" parent="." unique_id=995462630 instance=ExtResource("14_vtepg")]
position = Vector2(1308, 53)
scale = Vector2(3, 3)

[node name="Coins2" parent="." unique_id=1824731519 instance=ExtResource("14_vtepg")]
position = Vector2(101, 53.000004)
scale = Vector2(3, 3)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1024446499]
position = Vector2(710, 470)
scale = Vector2(10.502402, 8.397728)
sprite_frames = SubResource("SpriteFrames_8dnnj")
animation = &"Idle"
autoplay = "Idle"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="." unique_id=760865713]
texture_filter = 1
position = Vector2(1011, 507.864)
scale = Vector2(2.75, 2.7854993)
sprite_frames = SubResource("SpriteFrames_ujyyl")
animation = &"run"
autoplay = "run"

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="." unique_id=1111183628]
position = Vector2(416, 574)
scale = Vector2(2.4500008, 2.125)
sprite_frames = SubResource("SpriteFrames_ehtkc")
autoplay = "default"
flip_h = true

[connection signal="pressed" from="Button" to="." method="_on_comenzar_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_salir_pressed"]
